# tinker-cookbook

./: .pre-commit-config.yaml  .sync_state  CONTRIBUTING.md  FEATURED_PROJECTS.md  README.md  STYLE_GUIDE.md  invocations.md  pyproject.toml
.github/workflows/: pre-commit.yaml  pyright.yaml
tinker_cookbook/: completers.py  convert_sft_dataset_to_jsonl.py  custom_evaluators.py  display.py  hyperparam_utils.py  inspect_evaluators.py  inspect_utils.py  model_info.py  renderer_templates.py  renderer_templates_test.py  renderers.py  run_inspect_evals.py  tokenizer_utils.py  torch_style.py  viz_sft_dataset.py
tinker_cookbook/chat_app/: tinker_chat_cli.py
tinker_cookbook/eval/: custom_inspect_task.py
tinker_cookbook/preference/: comparison_policy_evaluator.py  dpo_datasets.py  preference_datasets.py  train_dpo.py  train_dpo_cli.py  types.py
tinker_cookbook/recipes/: README.md  convert_ckpt.py  rl_basic.py  rl_loop.py  sl_basic.py  sl_diff_loop.py  sl_loop.py
tinker_cookbook/rl/: arithmetic_env.py  data_processing.py  math_env.py  math_grading.py  metric_util.py  metrics.py  play_env.py  play_textarena_games.py  preference_envs.py  problem_env.py  rollouts.py  textarena_envs.py  train.py  train_cli.py  types.py
tinker_cookbook/supervised/: chat_datasets.py  common.py  data.py  nll_evaluator.py  train.py  train_cli.py  train_pipelined.py  types.py  viz_sft_dataset.py
tinker_cookbook/tests/: compare_sampling_training_logprobs.py  smoke_tests.py  test_renderers.py  test_resume.py  test_rl_datasets.py  test_utils.py
tinker_cookbook/utils/: misc_utils.py  ml_log.py
(+34 files in other folders)
