[project]
name = "tinker_cookbook"
version = "0.1.0"
description = "Implementations of post-training algorithms using the Tinker API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chz",
    "datasets",
    "numpy",
    "rich",
    "termcolor",
    "tinker",
    "torch",
    "transformers",
    "blobfile",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]
envs = [
    "anyio",
    "pylatexenc",
    "sympy",
    "textarena",
]
vector-search = [
    "chromadb",
    "google-genai",
    "huggingface_hub"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinker_cookbook"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
